Cyberduck
https://cyberduck.io/

6.6.0
- [Feature] Include shared items (OneDrive) (#10107)
- [Feature] Add support to login with Shared Access Signature (SAS) Token (Azure)
- [Bugfix] Application error when opening connection (DRACOON) (Windows Store)

6.5.0
- [Bugfix] Improved performance accessing vaults (Cryptomator)
- [Bugfix] Improved performance accessing files (Backblaze B2, Google Drive)
- [Bugfix] Allow reuse of OAuth tokens (Cyberduck CLI, Windows)

6.4.6
- [Bugfix] Fix use proxy configuration using PAC file (macOS)
- [Bugfix] Disable extended master secret extension to allow session reuse for data connections (FTP-SSL) (#10276)

6.4.4
- [Bugfix] Skip failures saving or finding passwords in credential manager (Windows)
- [Bugfix] Ignore 550 error replies for STAT (FTP) (#10240)

6.4.3
- [Bugfix] Workaround error parsing codesigning entitlement by signing process in Mac App Store causing connect error due to missing entitlement key (Mac App Store) (#10237)

6.4.1
- [Bugfix] Cannot edit ACLs and metadata in Info panel (macOS) (#10226)

6.4.0
- [Feature] Support for eu-west-3 (Paris) region (S3) (#10207)
- [Feature] Support for Integrated Windows Authentication (IWA) authentication (WebDAV, Windows)
- [Feature] Save passwords in credential manager (Windows) (#9988)
- [Feature] Support authenticating with HTTP proxy (Windows)
- [Bugfix] Support for Oracle Cloud Infrastructure (OCI) Object Storage (S3) (#10194)
- [Bugfix] Do not save passphrase for vaults by defaults (Cryptomator, Windows)
- [Bugfix] Application freezes for long time when selecting many files for upload (Windows)
- [Bugfix] Set modification date on uploaded files (OneDrive) (#10171)
- [Bugfix] Application hangs when selecting a large number of files for upload (Windows)
- [Bugfix] Do not save vault passphrase by default (Cryptomator)
- [Bugfix] Fix failures when attempting to read attributes of incomplete multipart upload (S3)