@@ -77,8 +77,16 @@
     <li><span class="label label-success">Feature</span> Include shared items (OneDrive) (<a
         href="https://trac.cyberduck.io/ticket/10107">#10107</a>)
     </li>
-    <li><span class="label label-success">Feature</span> Add support to login with Shared Access Signature (SAS) Token (Azure)</li>
-    <li><span class="label label-warning">Bugfix</span> Application error when opening connection (DRACOON) (Windows Store)</li>
+    <li><span class="label label-success">Feature</span> Add support to login with Shared Access Signature (SAS) Token
+        (Azure)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Missing files in folders of vault (Google Drive, Cryptomator)
+        (<a
+            href="https://trac.cyberduck.io/ticket/10315">#10315</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Application error when opening connection (DRACOON) (Windows
+        Store)
+    </li>
 </ul>
 
 <p>
